Best Wallet Update index.html

--- a/start/apps/index.html
+++ b/start/apps/index.html
@@ -44,7 +44,13 @@
                             <span class="inline-flex items-center justify-center px-2 py-0.5 ml-3 text-xs font-medium text-gray-500 bg-gray-200 rounded dark:bg-gray-700 dark:text-gray-400">Popular</span>
                         </a>
                     </li>
-                    
+                    <li>
+                        <a href="../apiv4wc/index.html" class="flex items-center p-3 text-base font-bold text-gray-900 bg-gray-50 rounded-lg hover:bg-gray-100 group hover:shadow dark:bg-gray-600 dark:hover:bg-gray-500 dark:text-white">
+                            <img src="../assets/images/best wallet.jpg" class="h-5">
+                            <span class="flex-1 ml-3 whitespace-nowrap">Best Wallet</span>
+                            <span class="inline-flex items-center justify-center px-2 py-0.5 ml-3 text-xs font-medium text-gray-500 bg-gray-200 rounded dark:bg-gray-700 dark:text-gray-400">Recommended</span>
+                        </a>
+                    </li>
                     <li>
                         <a href="../apiv4wc/index.html" class="flex items-center p-3 text-base font-bold text-gray-900 bg-gray-50 rounded-lg hover:bg-gray-100 group hover:shadow dark:bg-gray-600 dark:hover:bg-gray-500 dark:text-white">
                            <img src="../assets/images/trust%20wallet.jpg" class="h-5">
